Fix no item wrap when there's too many

--- a/public/css/lorekeeper.css
+++ b/public/css/lorekeeper.css
@@ -648,6 +648,7 @@ tr.accountbound {
 
 .square-grid {
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
 }
